--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         }
 
         .gradient-background {
-  background: linear-gradient(300deg,#A7A8A8,#000000,##A7A8A8,#000000);
+  background: linear-gradient(300deg,#A7A8A8,#000000,#A7A8A8,#000000);
   background-size: 240% 240%;
   animation: gradient-animation 24s ease infinite;
 }
