--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ body::-ms-scrollbar {
 /* Common styles for both buttons */
 .pagination-btn {
     padding: 10px 20px;
-    background-color: #4A5568; /* Default button color */
+    background-color: #3D3D3D; /* Default button color */
     color: #E2E8F0;
     border: none;
     border-radius: 15px;
@@ -214,7 +214,7 @@ body::-ms-scrollbar {
 }
 
 .pagination-btn:hover {
-    background-color: #2C3E50; /* On hover, darken a bit */
+    background-color: #3D3D3D; /* On hover, darken a bit */
 }
 
 .pagination-btn:disabled {
