--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body::-ms-scrollbar {
     padding: 10px 20px;
     background-color: #3D3D3D; /* Default button color */
     color: #E2E8F0;
-    border: none;
+    border: 1px solid #BFBFBF;
     border-radius: 15px;
     transition: background-color 0.3s;
     cursor: pointer;
