--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
 .searchBar:hover {
             cursor: pointer;
-            background-color: #3D3D3D; /* On hover, darken a bit */
+            background-color: #5C5C5C; /* On hover, darken a bit */
         }
         .entry {
             background-color: #3D3D3D; /* Slightly lighter than the container for contrast */
@@ -69,7 +69,7 @@
 
         .entry:hover {
             cursor: pointer;
-            background-color: #2C3E50; /* On hover, darken a bit */
+            background-color: #5C5C5C; /* On hover, darken a bit */
         }
 
         .entry-title {
@@ -214,7 +214,7 @@ body::-ms-scrollbar {
 }
 
 .pagination-btn:hover {
-    background-color: #3D3D3D; /* On hover, darken a bit */
+    background-color: #5C5C5C; /* On hover, darken a bit */
 }
 
 .pagination-btn:disabled {
