--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ body::-ms-scrollbar {
     </div>
 
     <div class="search-container">
-        <input class="searchBar" type="text" id="searchBar" placeholder="Search by title...">
+        <input class="searchBar" type="text" id="searchBar" placeholder="Search...">
     </div>
     <div class="container" id="dataContainer"></div>
 
