--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
     color: #E2E8F0;
 }
 
+        audio {
+    background-color: transparent; /* Set background to transparent */
+}
 /* Responsive Menu Icon */
 @media (max-width: 768px) {
     .nav-items {
