--- a/index.html
+++ b/index.html
@@ -169,24 +169,6 @@
 .popup-item:hover {
     color: #E2E8F0;
 }
-
-/* Style for the audio player container */
-.audio-player {
-    display: flex;
-    align-items: center;
-    background-color: transparent;
-}
-
-/* Style for the play/pause button */
-.audio-player button {
-    /* Your button styles here */
-}
-
-/* Style for the volume control */
-.audio-player input[type="range"] {
-    /* Your range input styles here */
-}
-
 /* Responsive Menu Icon */
 @media (max-width: 768px) {
     .nav-items {
@@ -239,6 +221,9 @@ body::-ms-scrollbar {
     opacity: 0.5;
 }
 
+        audio::-webkit-media-controls-panel {
+  background-color: transparent;
+}
     </style>
 </head>
 
@@ -321,15 +306,7 @@ function displayData(data, page) {
             <audio controls>
                 <source src="${jsonAudio}" type="audio/mpeg">
                 Your browser does not support the audio element.
-            </audio>
-            <div class="audio-player">
-<audio id="myAudio">
-    <source src="${jsonAudio}" type="audio/mpeg">
-    Your browser does not support the audio element.
-    </audio>
-    <button id="playPauseBtn">Play</button>
-    <input type="range" id="volumeControl" min="0" max="1" step="0.1" value="1">
-</div>`;
+            </audio>`;
 
         container.appendChild(entryDiv);
     });
