--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ body::-ms-scrollbar {
 }
 
         audio::-webkit-media-controls-panel {
-  background-color: transparent;
+  background-color: #3D3D3D;
 }
     </style>
 </head>
