--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@ body::-ms-scrollbar {
 }
 
         audio::-webkit-media-controls-panel {
+  background-color: #5C5C5C;
+}
+
+                audio:hover:-webkit-media-controls-panel {
   background-color: #3D3D3D;
 }
     </style>
