--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ body::-ms-scrollbar {
   background-color: #5C5C5C;
 }
 
-                audio:hover:-webkit-media-controls-panel {
+                audio::-webkit-media-controls-panel:hover {
   background-color: #3D3D3D;
 }
     </style>
