--- a/ai.html
+++ b/ai.html
@@ -3,34 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT API Interaction</title>
+    <title>Free Chatbot Interaction</title>
     <script>
         async function sendMessage() {
             const inputMessage = document.getElementById("inputMessage").value;
             const outputElement = document.getElementById("outputMessage");
 
-            const response = await fetch('https://chatgpt-api.shn.hk/v1/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    model: "gpt-3.5-turbo",
-                    messages: [{"role": "user", "content": inputMessage}]
-                })
-            });
+            try {
+                const response = await fetch('https://api.inferkit.com/v1/models/standard/generate', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        prompt: {
+                            text: inputMessage
+                        },
+                        length: 50
+                    })
+                });
 
-            if (response.ok) {
-                const data = await response.json();
-                outputElement.textContent = data.choices[0].message.content;
-            } else {
-                outputElement.textContent = "Error: Unable to get response from the API";
+                if (response.ok) {
+                    const data = await response.json();
+                    outputElement.textContent = data.data.text;
+                } else {
+                    const errorText = await response.text();
+                    outputElement.textContent = `Error: ${response.status} ${response.statusText} - ${errorText}`;
+                }
+            } catch (error) {
+                outputElement.textContent = `Error: ${error.message}`;
             }
         }
     </script>
 </head>
 <body>
-    <h1>Chat with GPT-3.5 Turbo</h1>
+    <h1>Chat with GPT</h1>
     <textarea id="inputMessage" rows="4" cols="50" placeholder="Type your message here..."></textarea><br>
     <button onclick="sendMessage()">Send</button>
     <h2>Response:</h2>
