--- a/phonkdex.html
+++ b/phonkdex.html
@@ -5,35 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHONKDEX</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+        
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
             background-color: #121212;
             color: #FFFFFF;
-        }
-        .container {
-            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            width: 100%;
             padding: 10px 20px;
             background-color: #1F1F1F;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
             border-bottom: 1px solid #333;
-        }
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
-        .logo .phonk {
-            color: #FFFFFF;
-        }
-        .logo .dex {
-            color: transparent;
-            -webkit-text-stroke: 1px #FFFFFF;
+            display: flex;
+            justify-content: flex-end;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
         }
         .menu {
             position: relative;
@@ -69,13 +64,52 @@
         .menu-content a:last-child {
             border-bottom: none;
         }
+        .logo-container {
+            text-align: center;
+            margin-top: 100px;
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+        .logo {
+            font-size: 48px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        .logo .phonk {
+            color: #FFFFFF;
+        }
+        .logo .dex {
+            color: transparent;
+            -webkit-text-stroke: 1px #FFFFFF;
+        }
+        .description {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+        .buttons {
+            display: flex;
+            gap: 20px;
+        }
+        .buttons a {
+            padding: 10px 20px;
+            color: #FFFFFF;
+            background-color: #333;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+        .buttons a:hover {
+            background-color: #555;
+        }
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <span class="phonk">PHONK</span><span class="dex">DEX</span>
-        </div>
         <div class="menu">
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
             <div class="menu-content" id="menu-content">
@@ -86,10 +120,17 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <!-- Inhalt der Seite -->
-        <h1>Willkommen bei PHONKDEX</h1>
-        <p>Dies ist eine Beispielseite für deinen Discord Bot.</p>
+    <div class="logo-container">
+        <div class="logo">
+            <span class="phonk">PHONK</span><span class="dex">DEX</span>
+        </div>
+        <div class="description">
+            Der ultimative Discord Bot für alle deine Bedürfnisse.
+        </div>
+        <div class="buttons">
+            <a href="#invite">INVITE</a>
+            <a href="#join">JOIN OUR DISCORD</a>
+        </div>
     </div>
 
     <script>
