--- a/phonkdex.html
+++ b/phonkdex.html
@@ -6,17 +6,12 @@
     <title>PHONKDEX</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-        
+
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
             background-color: #121212;
             color: #FFFFFF;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
         }
         header {
             width: 100%;
@@ -64,16 +59,17 @@
         .menu-content a:last-child {
             border-bottom: none;
         }
-        .logo-container {
+        .main-container {
             text-align: center;
             margin-top: 100px;
             opacity: 0;
             animation: fadeIn 2s forwards;
         }
         .logo {
-            font-size: 48px;
+            font-size: 64px;
             font-weight: bold;
             text-transform: uppercase;
+            margin-bottom: 20px;
         }
         .logo .phonk {
             color: #FFFFFF;
@@ -83,12 +79,14 @@
             -webkit-text-stroke: 1px #FFFFFF;
         }
         .description {
-            font-size: 18px;
+            font-size: 24px;
             margin: 20px 0;
         }
         .buttons {
             display: flex;
+            justify-content: center;
             gap: 20px;
+            margin-top: 20px;
         }
         .buttons a {
             padding: 10px 20px;
@@ -96,6 +94,7 @@
             background-color: #333;
             text-decoration: none;
             border-radius: 8px;
+            font-size: 18px;
             transition: background-color 0.3s;
         }
         .buttons a:hover {
@@ -120,7 +119,7 @@
             </div>
         </div>
     </header>
-    <div class="logo-container">
+    <div class="main-container">
         <div class="logo">
             <span class="phonk">PHONK</span><span class="dex">DEX</span>
         </div>
