--- a/phonkdex.html
+++ b/phonkdex.html
@@ -12,6 +12,7 @@
             font-family: 'Roboto', sans-serif;
             background-color: #121212;
             color: #FFFFFF;
+            overflow-x: hidden; /* Verhindert horizontales Scrollen */
         }
         header {
             width: 100%;
@@ -61,9 +62,10 @@
         }
         .main-container {
             text-align: center;
-            margin-top: 100px;
+            margin-top: 120px;
             opacity: 0;
             animation: fadeIn 2s forwards;
+            padding: 0 20px;
         }
         .logo {
             font-size: 64px;
@@ -77,6 +79,12 @@
         .logo .dex {
             color: transparent;
             -webkit-text-stroke: 1px #FFFFFF;
+        }
+        .separator {
+            width: 80%;
+            height: 1px;
+            background-color: #333;
+            margin: 20px auto;
         }
         .description {
             font-size: 24px;
@@ -123,6 +131,7 @@
         <div class="logo">
             <span class="phonk">PHONK</span><span class="dex">DEX</span>
         </div>
+        <div class="separator"></div>
         <div class="description">
             Der ultimative Discord Bot für alle deine Bedürfnisse.
         </div>
@@ -130,16 +139,13 @@
             <a href="#invite">INVITE</a>
             <a href="#join">JOIN OUR DISCORD</a>
         </div>
+        <div class="separator"></div>
     </div>
 
     <script>
         function toggleMenu() {
             const menuContent = document.getElementById('menu-content');
-            if (menuContent.style.display === 'block') {
-                menuContent.style.display = 'none';
-            } else {
-                menuContent.style.display = 'block';
-            }
+            menuContent.style.display = menuContent.style.display === 'block' ? 'none' : 'block';
         }
 
         // Schließe das Menü, wenn irgendwo außerhalb des Menüs geklickt wird
