--- a/kick.html
+++ b/kick.html
@@ -35,10 +35,12 @@
 
         audioFileInput.addEventListener('change', handleAudioFile);
         videoFileInput.addEventListener('change', handleVideoFile);
+        waveformCanvas.addEventListener('click', handleWaveformClick);
 
         let audioContext;
         let audioBuffer;
         let kickTimes = [];
+        let animationFrameId;
 
         async function handleAudioFile(event) {
             const file = event.target.files[0];
@@ -106,6 +108,7 @@
         async function handleVideoFile(event) {
             const file = URL.createObjectURL(event.target.files[0]);
             videoElement.src = file;
+            videoElement.style.display = 'block';
 
             videoElement.addEventListener('loadeddata', () => {
                 canvas.width = videoElement.videoWidth;
@@ -113,25 +116,26 @@
 
                 videoElement.addEventListener('play', () => {
                     console.log('Video is playing');
-                    function drawFrame() {
-                        if (!videoElement.paused && !videoElement.ended) {
-                            context.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
-                            requestAnimationFrame(drawFrame);
-                        }
-                    }
-
-                    requestAnimationFrame(drawFrame);
-
-                    videoElement.addEventListener('timeupdate', () => {
-                        const currentTime = videoElement.currentTime;
-                        console.log('Current video time:', currentTime);
-                        if (kickTimes.some(time => Math.abs(time - currentTime) < 0.1)) {
-                            console.log('Kick detected at:', currentTime);
-                            shakeVideo();
-                        }
-                    });
+                    drawFrame();
                 });
+
+                videoElement.addEventListener('pause', () => {
+                    cancelAnimationFrame(animationFrameId);
+                });
+
+                videoElement.addEventListener('timeupdate', updateWaveformPosition);
             });
+        }
+
+        function drawFrame() {
+            if (!videoElement.paused && !videoElement.ended) {
+                context.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
+                if (kickTimes.some(time => Math.abs(time - videoElement.currentTime) < 0.1)) {
+                    console.log('Kick detected at:', videoElement.currentTime);
+                    shakeVideo();
+                }
+                animationFrameId = requestAnimationFrame(drawFrame);
+            }
         }
 
         function shakeVideo() {
@@ -153,6 +157,26 @@
                 }
             }
             shake();
+        }
+
+        function handleWaveformClick(event) {
+            if (!audioBuffer || !videoElement.src) return;
+
+            const rect = waveformCanvas.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const seekTime = (x / waveformCanvas.width) * audioBuffer.duration;
+            videoElement.currentTime = seekTime;
+        }
+
+        function updateWaveformPosition() {
+            const currentTime = videoElement.currentTime;
+            const x = (currentTime / audioBuffer.duration) * waveformCanvas.width;
+            
+            drawWaveform(audioBuffer, kickTimes);
+
+            // Draw current playback position
+            waveformContext.fillStyle = 'blue';
+            waveformContext.fillRect(x, 0, 2, waveformCanvas.height);
         }
     </script>
 </body>
